version/0.66/_sources/examples/gallery_examples/02-tips-n-tricks/00-example-template.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/02-tips-n-tricks/00-example-template.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_02-tips-n-tricks_00-example-template.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_02-tips-n-tricks_00-example-template.py:


.. _ref_how_to_add_an_example_reference_key:

Adding a New Gallery Example
----------------------------

This example demonstrates how to add new examples as well as being a template that can
be used in their creation.

This block comment should be included at the top of any new example. Each example
should have a reference tag/key in the form:

``.. _ref_my_example:``

The ``.. _ref_`` is necessary. Everything that follows is your reference tag. As
convention, we keep all references all in ``snake_case``.

This section should give a brief overview of what the example is about and/or demonstrates.
The title should be changed to reflect the topic your example covers.

New examples should be added as python scripts to:

``PyMAPDL/examples/XY-example-folder-name/``

.. note::
   Avoid creating new folders unless absolutely necessary. If in doubt put the example
   in the folder closest to what it is doing and its precise location can be advised
   on in the pull request. If you *must* create a new folder, make sure to add a
   ``README.txt`` containing a reference, a title and a single sentence description of the folder.
   Otherwise the new folder will be ignored by Sphinx.

Example file names should be in the format:

``XY-example-name.py``

Where ``XY`` is the number of the example. If there are already three examples numbered
``00``, ``01``, and ``02``, then your example must subsequently use the prefix ``03``.

After this preamble is complete, the first code block begins.

.. GENERATED FROM PYTHON SOURCE LINES 41-52

.. code-block:: default


    from ansys.mapdl.core import launch_mapdl

    # start MAPDL
    mapdl = launch_mapdl()
    print(mapdl)

    # Your code goes here...
    # mapdl.prep7()
    # mapdl...





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Product:             Ansys Mechanical Enterprise
    MAPDL Version:       23.1
    ansys.mapdl Version: 0.66.0





.. GENERATED FROM PYTHON SOURCE LINES 53-65

Section Title
~~~~~~~~~~~~~
Code blocks can be broken up with text "sections" which are interpreted as
restructured text.

This will also be translated into a markdown cell in the generated jupyter notebook.
Sections can contain any information you may have regarding the example
such as step-by-step comments or notes regarding motivations etc.

As in jupyter notebooks, if code is left unassigned at the end of a code block
(as with ``mapdl`` in the previous block) the output will be generated and
printed to the screen according to its ``__repr__``.  Otherwise, you can use ``print()`` to output the ``__str__``.

.. GENERATED FROM PYTHON SOURCE LINES 65-71

.. code-block:: default


    # more code...
    mapdl.clear()
    mapdl.prep7()
    print(mapdl)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Product:             Ansys Mechanical Enterprise
    MAPDL Version:       23.1
    ansys.mapdl Version: 0.66.0





.. GENERATED FROM PYTHON SOURCE LINES 72-76

Plots and images
~~~~~~~~~~~~~~~~
If you use an mapdl plotting command the result will be auto-generated and
rendered in the page. Like so:

.. GENERATED FROM PYTHON SOURCE LINES 76-80

.. code-block:: default


    mapdl.block(0, 1, 0, 1, 0, 1)
    mapdl.vplot()




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/02-tips-n-tricks/images/sphx_glr_00-example-template_001.png
          :alt: 00 example template
          :srcset: /examples/gallery_examples/02-tips-n-tricks/images/sphx_glr_00-example-template_001.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/02-tips-n-tricks/images/sphx_glr_00-example-template_002.png
          :alt: 00 example template
          :srcset: /examples/gallery_examples/02-tips-n-tricks/images/sphx_glr_00-example-template_002.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 81-84

Further Plots and images
~~~~~~~~~~~~~~~~~~~~~~~~
Matplotlib plots will also be rendered in the html.

.. GENERATED FROM PYTHON SOURCE LINES 84-96

.. code-block:: default


    import matplotlib.pyplot as plt

    fig = plt.figure()
    ax = fig.add_subplot(111)
    x = list(range(10))
    y = [i**2 + 3 * i - 1 for i in x]
    ax.plot(x, y)
    ax.set_xlabel("x")
    ax.set_ylabel("y")
    plt.show()




.. image-sg:: /examples/gallery_examples/02-tips-n-tricks/images/sphx_glr_00-example-template_003.png
   :alt: 00 example template
   :srcset: /examples/gallery_examples/02-tips-n-tricks/images/sphx_glr_00-example-template_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 97-111

Animations
~~~~~~~~~~
You can even create animations.  See :ref:`ref_pyvista_mesh` for an example.
Incidentally that is also how you link to another example (via `ref_pyvista_mesh`).


Making a Pull Request
~~~~~~~~~~~~~~~~~~~~~
Once your example is complete and you've verified builds locally, you can make a pull request (PR).
Branches containing examples should be prefixed with `doc/` as per the branch
naming conventions found here: :ref:`contributing`.

Note that you only need to create the python source example (.py).  The jupyter
notebook, the example html and the demo script will all be auto-generated via ``sphinx-gallery``.

.. GENERATED FROM PYTHON SOURCE LINES 113-114

Stopping mapdl

.. GENERATED FROM PYTHON SOURCE LINES 114-115

.. code-block:: default

    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.737 seconds)


.. _sphx_glr_download_examples_gallery_examples_02-tips-n-tricks_00-example-template.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 00-example-template.py <00-example-template.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 00-example-template.ipynb <00-example-template.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
